# rust_json_parser

./: Cargo.toml  README.md
example/: main.rs
example/inputs/: large_placeholder.json  test_1.json  test_2.json
src/: lib.rs  tokenizer.rs
